Deprecation cleanup
- Do not use java.net.URL() constructors.
- Change error handler due to previous change.
- More URI management tests in the DOM & wrapper.
- Improvements to DOM wrapper (to ease tests of the above).
- Stricter hierarchy checks in the native DOM.